--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,38 @@
- html,
-body {
+html,body {
     width: 100%;
     height: 100%;
 }
 
 body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.darkPrimaryColor{
+    background-color:#388E3C !important;
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
+.heigthDarkPrimaryColor{
+    height: 3% !important;
+}
+
+.marginHeight{
+    margin-top: 3% !important;
+}
+
+.primaryColor{
+    background-color:#4CAF50 !important;
+}
+
+.lightPrimaryColor{
+    background-color: #C8E6C9 !important;
+}
+
+.accentColor{
+    background-color:#00BCD4 !important;
+    z-index: 2;
 }
 
 .text-vertical-center {
@@ -90,7 +117,7 @@ hr.small {
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999;
+    color: #FFFFFF;
 }
 
 .sidebar-nav li a:hover {
@@ -127,6 +154,8 @@ hr.small {
 }
 
 #sidebar-wrapper.active {
+    z-index: 1px;
+    margin-top: -20px;
     right: 250px;
     width: 250px;
     -webkit-transition: all 0.4s ease 0s;
@@ -137,7 +166,7 @@ hr.small {
 }
 
 .toggle {
-    margin: 5px 5px 0 0;
+    margin: 0px 0px 0 0;
 }
 
 /* Header */
