add button good

--- a/css/index.css
+++ b/css/index.css
@@ -15,11 +15,11 @@ body {
 }
 
 .heigthDarkPrimaryColor{
-    height: 3% !important;
+    height: 8px !important;
 }
 
 .marginHeight{
-    margin-top: 3% !important;
+    margin-top: 8px !important;
 }
 
 .primaryColor{
