--- a/css/index.css
+++ b/css/index.css
@@ -264,7 +264,8 @@ footer {
 .fixedButton {
     z-index: 1000;
     position: fixed;
-    right: 10px;
+    right: 45%;
+    left: 45%;
     bottom: 10px;
     
     -webkit-transition: all 0.4s ease 0s;
